--- a/views/index.erb
+++ b/views/index.erb
@@ -6,6 +6,7 @@
         <meta name="google-site-verification" content="cUWX8JFI31vB6M5HPZGZmoYoIAUT8TOvdMAVTTqbVGs"/>
         <meta name="Buena Cosecha | Ska, Reggae" content="Buena Cosecha, Página oficial, ska, reggae, musica, banda, shows, recitales, fotos, videos">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
@@ -16,7 +17,7 @@
     <body>
         <div class="w3-content w3-center" style="max-width:1200px;margin-top:30px">
             <div class="mySlides  w3-display-container">
-                <img class="animated rotateIn infinite" src="/imagenes/logos/bclogo.png">
+                <img class="animated rotateIn" src="/imagenes/logos/bclogo.png">
             </div>
           </div>
 
