--- a/views/index.erb
+++ b/views/index.erb
@@ -9,15 +9,14 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     </head>
 
     <body>
         <div class="w3-content w3-center" style="max-width:1200px;margin-top:30px">
             <div class="mySlides  w3-display-container">
-                <img class="animated rotateIn" src="/imagenes/logos/bclogo.png">
+                <img class="animated rotateIn infinite" src="/imagenes/logos/bclogo.png">
             </div>
           </div>
 
