--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,7 @@
     <body>
         <div class="w3-content w3-center" style="max-width:1000px;margin-top:30px">
             <div class="mySlides  w3-display-container">
-                <img class="animated slideInLeft" src="/imagenes/logos/bclogo.png">
+                <img class="animated zoomIn" src="/imagenes/logos/bclogo.png">
             </div>
           </div>
 
