letra green finguers

--- a/views/secciones/letras.erb
+++ b/views/secciones/letras.erb
@@ -48,36 +48,25 @@
         <br>
         <div class="w3-container">
             <div class="textocategorias">
-                Buena Cosecha
+                Green Fingers
             </div>
 
             <pre class="texttercernivel">
-    Y a pesar que voy probando. Que voy improvisando. Con el corazón para adelante avanzo.
-    No me intimida una caída. No es por hacerme el malo, es por que le pongo pila.
-    A mi no me interesa, qué futuro se acerca. Por futuros pasados estoy en esta senda.
-    Crecí en ella y por más que duela, hay que reconocer que yo aprendí de ella.
-    Así es la vida, es corta y rica. Mejor metele onda que quizás no se repita.
+    Se fue la luna, se esconde del sol. Se presta el día para cultivar hoy.
+    Buena energía que baña la tierra, que con las dos manos te da lo que quieras.
+    Ahí de rodillas con las uñas bien negras, haciendo espacio que mi semilla espera.
+    Pequeña magia que llevas adentro, una explosión de aromas, colores y efectos.
 
-    Me voy contaminando, me voy intoxicando. Y cortos o largos voy mis pasos dando.
-    Camino lento y estoy sonriendo. Por que mi destino yo estoy descubriendo.
-    Hoy no oculto mis miedos, no planto en el silencio. Te estoy transmitiendo que esto sí va en serio.
-    Ya sé que cuesta. Intentá y creá. Y a todas mis preguntas encontraré una respuesta.
+    Ya contamos las horas. Que esos tallos revienten con flores ahora.
+    Hay que alegría me espera, que pasen los meses llegá primavera.
 
-    Salgo a caminar, para no pensar...
-    Dejarme llevar…
-    Y empiezo a cantar…..
-    La la la.
+    Pasan los días, los climas y ahora observo inquieto como crecen las hojas.
+    Coopero en algo abonando tu tierra. El trabajo de campo no es lo que uno espera.
+    Avanza el tiempo y me veo las manos, con dedos verdes de tanto podado.
+    Se acerca el día, ese tan esperado, y con esos frutos seré coronado.
 
-    Ya se está terminando, esto que estoy rapeando. Y aunque bueno o malo el mensaje es claro.
-    Ponele el pecho, y andá por eso. Eso que te empuja a cumplir tus deseos.
-    Hay voluntad de sobra. NO planto en la memoria. Que no se repita lo que te demora.
-    Sangre en mis venas. Meta entre cejas. Prestá atención ahora que suena Buena Cosecha !!
-
-    Por más….
-    Voy por más….
-    Por más……
-    Voy por más….
-    La la la la.
+    Se nutre mi cuerpo de savia sabrosa. Y mi alma agradece al esfuerzo que ignora.
+    Green Finguers. Del ritual pagano. Cayeron las ramas que fiesta nos trajo.
         </pre>
         </div>
         <br>
