--- a/views/secciones/banda.erb
+++ b/views/secciones/banda.erb
@@ -9,6 +9,7 @@
         </head>
 
         <!--Section: Team v.1-->
+        <body>
         <section class="section team-section">
 
             <!--Section heading-->
@@ -129,5 +130,5 @@
 
         </section>
         <!--/Section: Team v.1-->
-        <body></body>
+        </body>
     </html>
