--- a/views/secciones/banda.erb
+++ b/views/secciones/banda.erb
@@ -12,6 +12,23 @@
         <body>
         <section class="section team-section">
 
+          <div class="col-md-3">
+              <a href="#" class="member-profile">
+                  <div class="unhover_img">
+                      <img src="img/speaker-1.png" alt="" />
+                  </div>
+                  <div class="hover_img">
+                      <img src="img/speaker-1-hover.png" alt="" />
+                  </div>
+                  <span>Creative Director</span>
+                  <h4><span>Patrick </span> Simpson</h4>
+              </a>
+              <ul>
+                  <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                  <li><a href="#"  target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                  <li><a href="#" target="_blank"><i class="fa fa-foursquare"></i></a></li>
+              </ul>
+          </div>
             <!--Section heading-->
             <h1 class="section-heading">Our amazing team</h1>
             <!--Section description-->
