--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2055,21 +2055,21 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 }
 
 .menuhomerojo {
-    font-size: 40px;
+    font-size: 34px;
     font-family: 'Slackey', cursive;
-    color: #A32535;
+    color: #ffffff;
 }
 
 .menuhomeamarillo {
-    font-size: 40px;
+    font-size: 34px;
     font-family: 'Slackey', cursive;
-    color: #E6D672;
+    color: #ffffff;
 }
 
 .menuhomeverde {
-    font-size: 40px;
+    font-size: 34px;
     font-family: 'Slackey', cursive;
-    color: #43962D;
+    color: #ffffff;
 }
 
 .textomenucentro {
