--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -14,6 +14,13 @@
 
         <div class="w3-container w3-hoverable">
             <a href="carnal" class="quitar">
+                <span class="textodescripcion">Makena Cantina Club | 22 hs | CABA|</span>
+                <span class="texttercernivel">14 de Febrero de 2017</span>
+                <img src="/imagenes/flyers/makena.jpg" class="w3-circle w3-margin-right" style="width:45px">
+            </a>
+        </div>
+        <div class="w3-container w3-hoverable">
+            <a href="carnal" class="quitar">
                 <span class="textodescripcion">Carnal Bar | 21 hs | CABA|</span>
                 <span class="texttercernivel">8 de Febrero de 2017</span>
                 <img src="/imagenes/flyers/carnalbar.jpg" class="w3-circle w3-margin-right" style="width:45px">
