--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -13,7 +13,7 @@
         <br>
 
         <div class="w3-container w3-hoverable">
-            <a href="carnal" class="quitar">
+            <a href="makena" class="quitar">
                 <span class="textodescripcion">Makena Cantina Club | 22 hs | CABA|</span>
                 <span class="texttercernivel">14 de Febrero de 2017</span>
                 <img src="/imagenes/flyers/makena.jpg" class="w3-circle w3-margin-right" style="width:75px">
