--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -19,6 +19,7 @@
                 <img src="/imagenes/flyers/makena.jpg" class="w3-circle w3-margin-right" style="width:75px">
             </a>
         </div>
+        <br>
         <div class="w3-container w3-hoverable">
             <a href="carnal" class="quitar">
                 <span class="textodescripcion">Carnal Bar | 21 hs | CABA|</span>
@@ -43,7 +44,8 @@
             <a href="https://www.facebook.com/events/1842814522622071/" class="quitar">
                 <span class="textodescripcion">White Vinyl | 23 hs | Avellaneda|</span>
                 <span class="texttercernivel">3 de Diciembre de 2016</span>
-                <img src="/imagenes/flyers/whitevinyl2.jpg" class="w3-circle w3-margin-right" style="width:45px"> Cancelado
+                <img src="/imagenes/flyers/whitevinyl2.jpg" class="w3-circle w3-margin-right" style="width:45px">
+                Cancelado
             </a>
         </div>
 
@@ -63,7 +65,8 @@
             <a href="pasados" class="quitar">
                 <span class="textodescripcion">Zona 42 | 23 hs | Guernica|</span>
                 <span class="texttercernivel">15 de Octubre de 2016</span>
-                <img src="/imagenes/flyers/zona42.jpg" class="w3-circle w3-margin-right" style="width:30px"> Cancelado
+                <img src="/imagenes/flyers/zona42.jpg" class="w3-circle w3-margin-right" style="width:30px">
+                Cancelado
             </a>
         </div>
 
