--- a/views/index.erb
+++ b/views/index.erb
@@ -14,80 +14,81 @@
     </head>
 
     <body>
-        <div class="w3-content w3-center" style="max-width:1000px;margin-top:30px">
+        <div class="w3-content w3-center" style="max-width:960px;margin-top:30px">
             <div class="mySlides  w3-display-container">
                 <img class="animated zoomIn" src="/imagenes/logos/bclogo.png">
             </div>
           </div>
 
-
-            <!--
-
-      URL del artículo: http://www.ejemplode.com/17-html/94-ejemplo_de_comentario_en_html.html
-      Leer completo: ejemplos de Comentario en HTML
-        <div class="w3-content w3-center" style="max-width:1800px;margin-top:54px">
           <div class="mySlides  w3-display-container">
-              <img src="/imagenes/flyers/makena.jpg" class="w3-animate-bottom" style="width:100%">
+              <img src="/imagenes/galeria/slide/band1.jpg" class="w3-animate-bottom" style="width:100%">
               <div class="w3-display-middle w3-container w3-padding-16 w3-red">
                   Buena Cosecha !
               </div>
           </div>
 
             <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/band4.jpg" class="w3-animate-bottom" style="width:100%">
+                <img src="/imagenes/galeria/slide/band2.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-middle w3-container w3-padding-16 w3-red">
-                    Buena Cosecha !
+                    Si señor !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/banda1.jpg" class="w3-animate-top" style="width:100%">
+                <img src="/imagenes/galeria/slide/band3.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottomleft w3-container w3-padding-16 w3-red">
-                    Buena Cosecha !
+                    De Corazon !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/banda2.jpg" class="w3-animate-bottom" style="width:100%">
+                <img src="/imagenes/galeria/slide/band4.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-topleft w3-container w3-padding-16 w3-red">
-                    Buena Cosecha !
+                  Buena Cosecha !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/banda3.jpg" class="w3-animate-top" style="width:100%">
+                <img src="/imagenes/galeria/slide/band5.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-middle w3-container w3-padding-16 w3-red">
-                    Buena Cosecha !
+                  Si señor !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/banda8.jpg" class="w3-animate-bottom" style="width:100%">
+                <img src="/imagenes/galeria/slide/band6.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottomright w3-container w3-padding-16 w3-red">
-                    Buena Cosecha !
+                  De Corazon !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/banda20.jpg" class="w3-animate-top" style="width:100%">
+                <img src="/imagenes/galeria/slide/band7.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-topright w3-container w3-padding-16 w3-red">
                     Buena Cosecha !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/banda30.jpg" class="w3-animate-bottom" style="width:100%">
+                <img src="/imagenes/galeria/slide/band8.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-topmiddle w3-container w3-padding-16 w3-red">
-                    Buena Cosecha !
+                  Si señor !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/banda60.jpg" class="w3-animate-top" style="width:100%">
+                <img src="/imagenes/galeria/slide/band9.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-middle w3-container w3-padding-16 w3-red">
-                    Buena Cosecha !
+                  De Corazon !
                 </div>
             </div>
             <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/bandd.jpg" class="w3-animate-top" style="width:100%">
+                <img src="/imagenes/galeria/slide/band10.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-red">
                     Buena Cosecha !
                 </div>
             </div>
-        </div> -->
+            <div class="mySlides  w3-display-container">
+                <img src="/imagenes/galeria/slide/band11.jpg" class="w3-animate-top" style="width:100%">
+                <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-red">
+                  Si señor !
+                </div>
+            </div>
+
+        </div>
 
         </body>
 
