--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
-<o></o><!DOCTYPE html>
+<o></o>
+<!DOCTYPE html>
 <html>
     <title>Buena Cosecha | Ska Reggae
     </title>
@@ -18,83 +19,83 @@
             <div class="mySlides  w3-display-container">
                 <img class="animated zoomIn" src="/imagenes/logos/bclogo.png">
             </div>
-          </div>
-
-          <div class="mySlides  w3-display-container">
-              <img src="/imagenes/galeria/slide/band1.jpg" class="w3-animate-bottom" style="width:100%">
-              <div class="w3-display-middle w3-container w3-padding-16 w3-red">
-                  Buena Cosecha !
-              </div>
-          </div>
-
-            <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/band2.jpg" class="w3-animate-bottom" style="width:100%">
-                <div class="w3-display-middle w3-container w3-padding-16 w3-red">
-                    Si señor !
-                </div>
-            </div>
-            <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/band3.jpg" class="w3-animate-top" style="width:100%">
-                <div class="w3-display-bottomleft w3-container w3-padding-16 w3-red">
-                    De Corazon !
-                </div>
-            </div>
-            <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/band4.jpg" class="w3-animate-bottom" style="width:100%">
-                <div class="w3-display-topleft w3-container w3-padding-16 w3-red">
-                  Buena Cosecha !
-                </div>
-            </div>
-            <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/band5.jpg" class="w3-animate-top" style="width:100%">
-                <div class="w3-display-middle w3-container w3-padding-16 w3-red">
-                  Si señor !
-                </div>
-            </div>
-            <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/band6.jpg" class="w3-animate-bottom" style="width:100%">
-                <div class="w3-display-bottomright w3-container w3-padding-16 w3-red">
-                  De Corazon !
-                </div>
-            </div>
-            <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/band7.jpg" class="w3-animate-top" style="width:100%">
-                <div class="w3-display-topright w3-container w3-padding-16 w3-red">
-                    Buena Cosecha !
-                </div>
-            </div>
-            <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/band8.jpg" class="w3-animate-bottom" style="width:100%">
-                <div class="w3-display-topmiddle w3-container w3-padding-16 w3-red">
-                  Si señor !
-                </div>
-            </div>
-            <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/band9.jpg" class="w3-animate-top" style="width:100%">
-                <div class="w3-display-middle w3-container w3-padding-16 w3-red">
-                  De Corazon !
-                </div>
-            </div>
-            <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/band10.jpg" class="w3-animate-top" style="width:100%">
-                <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-red">
-                    Buena Cosecha !
-                </div>
-            </div>
-            <div class="mySlides  w3-display-container">
-                <img src="/imagenes/galeria/slide/band11.jpg" class="w3-animate-top" style="width:100%">
-                <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-red">
-                  Si señor !
-                </div>
-            </div>
-
         </div>
 
-        </body>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band1.jpg" class="w3-animate-bottom" style="width:100%">
+            <div class="w3-display-middle w3-container w3-padding-16 w3-red">
+                Buena Cosecha !
+            </div>
+        </div>
 
-        <script src="/js/slide.js"></script>
-        <script src="/js/menu.js"></script>
-        <script src="/js/clicks.js"></script>
-        <script src="/js/jquery.js"></script>
-    </body>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band2.jpg" class="w3-animate-bottom" style="width:100%">
+            <div class="w3-display-middle w3-container w3-padding-16 w3-red">
+                Si señor !
+            </div>
+        </div>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band3.jpg" class="w3-animate-top" style="width:100%">
+            <div class="w3-display-bottomleft w3-container w3-padding-16 w3-red">
+                De Corazon !
+            </div>
+        </div>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band4.jpg" class="w3-animate-bottom" style="width:100%">
+            <div class="w3-display-topleft w3-container w3-padding-16 w3-red">
+                Buena Cosecha !
+            </div>
+        </div>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band5.jpg" class="w3-animate-top" style="width:100%">
+            <div class="w3-display-middle w3-container w3-padding-16 w3-red">
+                Si señor !
+            </div>
+        </div>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band6.jpg" class="w3-animate-bottom" style="width:100%">
+            <div class="w3-display-bottomright w3-container w3-padding-16 w3-red">
+                De Corazon !
+            </div>
+        </div>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band7.jpg" class="w3-animate-top" style="width:100%">
+            <div class="w3-display-topright w3-container w3-padding-16 w3-red">
+                Buena Cosecha !
+            </div>
+        </div>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band8.jpg" class="w3-animate-bottom" style="width:100%">
+            <div class="w3-display-topmiddle w3-container w3-padding-16 w3-red">
+                Si señor !
+            </div>
+        </div>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band9.jpg" class="w3-animate-top" style="width:100%">
+            <div class="w3-display-middle w3-container w3-padding-16 w3-red">
+                De Corazon !
+            </div>
+        </div>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band10.jpg" class="w3-animate-top" style="width:100%">
+            <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-red">
+                Buena Cosecha !
+            </div>
+        </div>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band11.jpg" class="w3-animate-top" style="width:100%">
+            <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-red">
+                Si señor !
+            </div>
+        </div>
+
+    </div>
+
+</body>
+
+<script src="/js/slide.js"></script>
+<script src="/js/menu.js"></script>
+<script src="/js/clicks.js"></script>
+<script src="/js/jquery.js"></script>
+</body>
 </html>
