--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -27,6 +27,14 @@
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
+        <div class="w3-container textocategorias">
+            <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
+                <span class="textocategorias2">Miércoles 21 de Junio</span>
+                en Carnal Bar (Niceto Vega 5511 CABA), 21 hs, Gratis
+                <i class="material-icons">priority_high</i>
+            </a>
+        </div>
+
         <br>
 
     </body>
