--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -20,6 +20,15 @@
             </a>
         </div>
         <br>
+                <div class="w3-container textocategorias">
+            <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
+                <span class="textocategorias2">Viernes 21 de Abril</span>
+                en El Teatro Verdi (Av. Almte Brown 726), 21 hs, $50
+                <i class="material-icons">priority_high</i>
+            </a>
+        </div>
+        <br>
+
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
                 <span class="textocategorias2">Martes 9 de Mayo</span>
