--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -13,7 +13,7 @@
         <br>
         <br>
         <div class="w3-container textocategorias">
-            <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
+            <a href="https://www.facebook.com/events/273456953098514/" target="_blank" class="quitar">
                 <span class="textocategorias2">Jueves 30 de Marzo</span>
                 en El Emergente Bar (Gallo 333 CABA), 20 hs, $50
                 <i class="material-icons">priority_high</i>
