--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -13,6 +13,24 @@
         <br>
 
         <div class="w3-container w3-hoverable">
+            <a href="verdi" class="quitar">
+                <span class="textodescripcion">Teatro Verdi | 21 hs | CABA|</span>
+                <span class="texttercernivel">21 de Abril de 2017</span>
+                <img src="/imagenes/flyers/verdi.jpg" class="w3-circle w3-margin-right" style="width:75px">
+            </a>
+        </div>
+        <br>
+
+
+        <div class="w3-container w3-hoverable">
+            <a href="emergente" class="quitar">
+                <span class="textodescripcion">El Emergente Bar | 21 hs | CABA|</span>
+                <span class="texttercernivel">30 de Marzo de 2017</span>
+                <img src="/imagenes/flyers/emergente.jpg" class="w3-circle w3-margin-right" style="width:75px">
+            </a>
+        </div>
+        <br>
+        <div class="w3-container w3-hoverable">
             <a href="makena" class="quitar">
                 <span class="textodescripcion">Makena Cantina Club | 22 hs | CABA|</span>
                 <span class="texttercernivel">14 de Febrero de 2017</span>
