--- a/views/fechas/birmania.erb
+++ b/views/fechas/birmania.erb
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
-        <title>Buena Cosecha, Ska Reggae | En El Teatro Verdi</title>
+        <title>Buena Cosecha, Ska Reggae | En Birmania</title>
     </head>
     <body>
         <br>
@@ -13,16 +13,16 @@
         <div class="w3-container">
             <div class="w3-row-padding w3-margin-top" style="margin:0 -16px">
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
             </div>
 
@@ -31,10 +31,10 @@
 
                 <div class="w3-modal-content">
                     <div class="w3-content" style="max-width:1200px">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%">
 
                         <div class="w3-row w3-black w3-center">
                             <div class="w3-container w3-display-container">
@@ -43,16 +43,16 @@
                                 <span class="w3-display-middle w3-hover-text-grey w3-large cursor" style="left:98%" onclick="plusDivs(1)">&#10095;</span>
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/birmania9-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
                             <div class="w3-col s3"></div>
                         </div>
