--- a/views/fechas/emergente.erb
+++ b/views/fechas/emergente.erb
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
-        <title>Buena Cosecha, Ska Reggae | En Makena Cantina Club</title>
+        <title>Buena Cosecha, Ska Reggae | En El Emergente Bar</title>
     </head>
     <body>
         <br>
