--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -11,6 +11,7 @@
         <br>
         <br>
         <br>
+        <br>
 
         <div class="w3-container w3-hoverable">
             <a href="verdi" class="quitar">
@@ -20,8 +21,14 @@
             </a>
         </div>
         <br>
-
-
+        <div class="w3-container w3-hoverable">
+            <a href="birmania" class="quitar">
+                <span class="textodescripcion">Birmania | 21 hs | CABA|</span>
+                <span class="texttercernivel">9 de abril de 2017</span>
+                <img src="/imagenes/logos/bclogo.jpg" class="w3-circle w3-margin-right" style="width:75px">
+            </a>
+        </div>
+        <br>
         <div class="w3-container w3-hoverable">
             <a href="emergente" class="quitar">
                 <span class="textodescripcion">El Emergente Bar | 21 hs | CABA|</span>
