--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -12,8 +12,17 @@
         <br>
         <br>
         <br>
+        <br>
+        <br>
 
-
+        <div class="w3-container textocategorias">
+            <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
+                <span class="textocategorias2">Domingo 7 de Mayo</span>
+                en Plaza Mariano Moreno (Frente a la estacion, Remedios de Escalada), 21 hs, alimento no perecedero
+                <i class="material-icons">priority_high</i>
+            </a>
+        </div>
+        <br>
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
                 <span class="textocategorias2">Martes 9 de Mayo</span>
@@ -22,7 +31,6 @@
             </a>
         </div>
         <br>
-
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
                 <span class="textocategorias2">Miércoles 21 de Junio</span>
