--- a/views/index.erb
+++ b/views/index.erb
@@ -93,6 +93,12 @@
                 Si señor !
             </div>
         </div>
+        <div class="mySlides  w3-display-container">
+            <img src="/imagenes/galeria/slide/band13.jpg" class="w3-animate-top" style="width:100%">
+            <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-red">
+                Si señor !
+            </div>
+        </div>
 
 
     </div>
