--- a/views/index.erb
+++ b/views/index.erb
@@ -90,13 +90,13 @@
         <div class="mySlides  w3-display-container">
             <img src="/imagenes/galeria/slide/band12.jpg" class="w3-animate-top" style="width:100%">
             <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-red">
-                Si señor !
+                De Corazon !
             </div>
         </div>
         <div class="mySlides  w3-display-container">
             <img src="/imagenes/galeria/slide/band13.jpg" class="w3-animate-top" style="width:100%">
             <div class="w3-display-bottommiddle w3-container w3-padding-16 w3-red">
-                Si señor !
+                Buena Cosecha !
             </div>
         </div>
 
