--- a/views/fechas/verdi.erb
+++ b/views/fechas/verdi.erb
@@ -2,27 +2,49 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
-        <title>Buena Cosecha, Ska Reggae | En El Teatro Verdi</title>
+        <title>
+            Cosecha, Ska Reggae | En el Teatro Verdi</title>
+        <style>
+            body {
+                font-family: "Lato", sans-serif;
+            }
+            .mySlides {
+                display: none;
+            }
+
+        </style>
     </head>
+    <br>
+    <br>
+    <br>
     <body>
-        <br>
-        <br>
-        <br>
         <div class="w3-container">
             <div class="w3-row-padding w3-margin-top" style="margin:0 -16px">
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/verdi21-4/banda1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/verdi21-4/banda2.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/verdi21-4/banda3.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
                 <div class="w3-col s3">
-                    <img src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                    <img src="/imagenes/galeria/fechas/verdi21-4/banda4.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/verdi21-4/banda5.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
+
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/verdi21-4/banda6.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/verdi21-4/banda7.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
+                </div>
+                <div class="w3-col s3">
+                    <img src="/imagenes/galeria/fechas/verdi21-4/banda8.jpg" style="width:100%;cursor:pointer" onclick="openModal();currentDiv(1)" class="w3-hover-shadow cursor">
                 </div>
             </div>
 
@@ -31,10 +53,14 @@
 
                 <div class="w3-modal-content">
                     <div class="w3-content" style="max-width:1200px">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%">
-                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/banda1.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/banda2.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/banda3.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/banda4.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/banda5.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/banda6.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/banda7.jpg" style="width:100%">
+                        <img class="mySlides" src="/imagenes/galeria/fechas/verdi21-4/banda8.jpg" style="width:100%">
 
                         <div class="w3-row w3-black w3-center">
                             <div class="w3-container w3-display-container">
@@ -43,24 +69,42 @@
                                 <span class="w3-display-middle w3-hover-text-grey w3-large cursor" style="left:98%" onclick="plusDivs(1)">&#10095;</span>
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/banda1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/banda2.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/banda3.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
                             <div class="w3-col s3">
-                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/band1.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/banda4.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
                             </div>
-                            <div class="w3-col s3"></div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/banda5.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/banda6.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/banda7.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
+                            <div class="w3-col s3">
+                                <img class="demo w3-opacity w3-hover-opacity-off cursor" src="/imagenes/galeria/fechas/verdi21-4/banda8.jpg" style="width:100%" onclick="currentDiv(1)" alt="Buena Cosecha">
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <script src="/js/imagegalery.js"></script>
+        <div class="w3-container quitar">
+            <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/">
+                <h5>Mas fotos acá!</h5>
+                <i class="icon-facebook-sign icon-3x"></i>
+            </a>
+        </div>
 
-        </body>
-    </html>
+        <script src="/js/imagegalery.js"></script>
+    </body>
+</html>
