--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -44,11 +44,11 @@
 
             <div class="w3-row w3-padding-32">
                 <div class="w3-third">
-                    <a href="https://www.facebook.com/Danilo.Bascones.1917?fref=ts" class="quitar" target="_blank">
-                        <p>Vasco
+                    <a href="https://www.facebook.com/carlosariel.mergen" class="quitar" target="_blank">
+                        <p>Ariel
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
-                        <img src="/imagenes/perfil/daniloperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
+                        <img src="/imagenes/perfil/arielperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                 </div>
 
                 <div class="w3-third">
@@ -74,13 +74,6 @@
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
                         <img src="/imagenes/perfil/hernanperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
-                </div>
-                <div class="w3-third">
-                    <a href="https://www.facebook.com/melina.german?fref=ts" class="quitar" target="_blank">
-                        <p>Meli
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                        </p>
-                        <img src="/imagenes/perfil/melinaperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                 </div>
                 <div class="w3-third">
                     <a href="https://www.facebook.com/facubks?fref=ts" class="quitar" target="_blank">
