--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -15,7 +15,7 @@
             <p class="w3-opacity">
                 <i>Estos somos!!</i>
             </p>
-            <p class="w3-justify textodescripcion">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Danilo en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta, Melina en percusión y Facundo en teclados
+            <p class="w3-justify textodescripcion">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Ariel en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta y Facundo en teclados
             </p>
             <div class="w3-row w3-padding-32">
                 <div class="w3-third">
