--- a/views/secciones/letras.erb
+++ b/views/secciones/letras.erb
@@ -20,7 +20,7 @@
     Y a pesar que voy probando. Que voy improvisando. Con el corazón para adelante avanzo.
     No me intimida una caída. No es por hacerme el malo, es por que le pongo pila.
     A mi no me interesa, qué futuro se acerca. Por futuros pasados estoy en esta senda.
-    Crecí en ella y por más que duela, hay que reconocer que yo aprendí de ella.
+    Crecí en ella y por más que duela, hay que reconocer que yo aprendí de esta.
     Así es la vida, es corta y rica. Mejor metele onda que quizás no se repita.
 
     Me voy contaminando, me voy intoxicando. Y cortos o largos voy mis pasos dando.
