agregado de leo

--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -15,7 +15,7 @@
             <p class="w3-opacity">
                 <i>Estos somos!!</i>
             </p>
-            <p class="w3-justify textodescripcion">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Ariel en bajo, Romina en trombon, Daniel en el saxo, Gastón en trompeta y Facundo en teclados
+            <p class="w3-justify textodescripcion">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Ariel en bajo, Romina en trombon, Gastón en trompeta, Facundo en teclados y Leonel en el saxo.
             </p>
             <div class="w3-row w3-padding-32">
                 <div class="w3-third">
@@ -74,11 +74,11 @@
                         <img src="/imagenes/perfil/arielperfil.jpg" class="w3-round" alt="Random Name" style="width:60%"></a>
                 </div>
                 <div class="w3-third">
-                    <a href="https://www.facebook.com/profile.php?id=100011909254275&fref=ts" class="quitar" target="_blank">
-                        <p>Dani
+                    <a href="https://www.facebook.com/leonel.lacazette.5" class="quitar" target="_blank">
+                        <p>Leo
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
-                        <img src="/imagenes/perfil/walterperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
+                        <img src="/imagenes/perfil/leoperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
                 </div>
             </div>
 
