--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -15,6 +15,14 @@
 
         <div class="w3-container w3-hoverable">
             <a href="verdi" class="quitar">
+                <span class="textodescripcion">Makena Cantina Club | 21 hs | CABA|</span>
+                <span class="texttercernivel">9 de mayo de 2017</span>
+                <img src="/imagenes/flyers/makena2.jpg" class="w3-circle w3-margin-right" style="width:45px">
+            </a>
+        </div>
+        <br>
+        <div class="w3-container w3-hoverable">
+            <a href="verdi" class="quitar">
                 <span class="textodescripcion">Teatro Verdi | 21 hs | CABA|</span>
                 <span class="texttercernivel">21 de Abril de 2017</span>
                 <img src="/imagenes/flyers/verdi.jpg" class="w3-circle w3-margin-right" style="width:30px">
