--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -17,8 +17,8 @@
 
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
-                <span class="textocategorias2">Martes 9 de Mayo</span>
-                en Makena Cantina Club (Fitz Roy 1519 CABA), 21 hs, $50
+                <span class="textocategorias2">Próximamente mas novedades !</span>
+                Estate atento!
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
