--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -14,7 +14,7 @@
         <br>
 
         <div class="w3-container w3-hoverable">
-            <a href="verdi" class="quitar">
+            <a href="makena2" class="quitar">
                 <span class="textodescripcion">Makena Cantina Club | 21 hs | CABA|</span>
                 <span class="texttercernivel">9 de mayo de 2017</span>
                 <img src="/imagenes/flyers/makena2.jpg" class="w3-circle w3-margin-right" style="width:45px">
