--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -16,9 +16,9 @@
         <br>
 
         <div class="w3-container textocategorias">
-            <a href="https://www.facebook.com/buenacosechabanda" target="_blank" class="quitar">
-                <span class="textocategorias2">Próximamente mas novedades !</span>
-                Estate atento!
+            <a href="https://www.facebook.com/events/461483437571767/" target="_blank" class="quitar">
+                <span class="textocategorias2">Viernes 22 de Septiembre en Gier !</span>
+                Alvarez Thomas 1078 CABA, entrada $100!
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
