--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -15,6 +15,22 @@
 
         <div class="w3-container w3-hoverable">
             <a href="makena2" class="quitar">
+                <span class="textodescripcion">Espresso Bar | 23 hs | Caseros|</span>
+                <span class="texttercernivel">2 de Diciembre de 2017</span>
+                <img src="/imagenes/flyers/espresso.jpg" class="w3-circle w3-margin-right" style="width:45px">
+            </a>
+        </div>
+        <br>
+        <div class="w3-container w3-hoverable">
+            <a href="makena2" class="quitar">
+                <span class="textodescripcion">Gier Music | 21 hs | CABA|</span>
+                <span class="texttercernivel">22 de Septiembre de 2017</span>
+                <img src="/imagenes/flyers/gier.jpg" class="w3-circle w3-margin-right" style="width:45px">
+            </a>
+        </div>
+        <br>
+        <div class="w3-container w3-hoverable">
+            <a href="makena2" class="quitar">
                 <span class="textodescripcion">Makena Cantina Club | 21 hs | CABA|</span>
                 <span class="texttercernivel">9 de mayo de 2017</span>
                 <img src="/imagenes/flyers/makena2.jpg" class="w3-circle w3-margin-right" style="width:45px">
