--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -14,7 +14,7 @@
         <br>
 
         <div class="w3-container w3-hoverable">
-            <a href="makena2" class="quitar">
+            <a href="espresso" class="quitar">
                 <span class="textodescripcion">Espresso Bar | 23 hs | Caseros|</span>
                 <span class="texttercernivel">2 de Diciembre de 2017</span>
                 <img src="/imagenes/flyers/espresso.jpg" class="w3-circle w3-margin-right" style="width:45px">
@@ -22,7 +22,7 @@
         </div>
         <br>
         <div class="w3-container w3-hoverable">
-            <a href="makena2" class="quitar">
+            <a href="gier" class="quitar">
                 <span class="textodescripcion">Gier Music | 21 hs | CABA|</span>
                 <span class="texttercernivel">22 de Septiembre de 2017</span>
                 <img src="/imagenes/flyers/gier.jpg" class="w3-circle w3-margin-right" style="width:45px">
