--- a/views/secciones/audios.erb
+++ b/views/secciones/audios.erb
@@ -13,7 +13,6 @@
         <br>
         <br>
 
-        <p class="textocategorias">En construcción</p>
-
+<iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/389595677&amp;color=%23c8e030&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
     </body>
 </html>
