--- a/views/secciones/audios.erb
+++ b/views/secciones/audios.erb
@@ -13,5 +13,6 @@
         <br>
         <br>
 
+<iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fbuenacosecha&color=white_orange&size=64" style="width: 64px; height: 64px;"></iframe>
 <iframe width="100%" height="600" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/389595677&amp;color=%23c8e030&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>    </body>
 </html>
