--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -82,7 +82,7 @@
                 </div>
                 <div class="w3-third">
                     <a href="https://www.facebook.com/guillermo.dunand" class="quitar" target="_blank">
-                        <p>Leo
+                        <p>Guille
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </p>
                         <img src="/imagenes/perfil/guilleperfil.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%"></a>
