--- a/views/secciones/nosotros.erb
+++ b/views/secciones/nosotros.erb
@@ -15,7 +15,7 @@
             <p class="w3-opacity">
                 <i>Estos somos!!</i>
             </p>
-            <p class="w3-justify textodescripcion">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Ariel en bajo, Romina en trombon, Gastón en trompeta, Facundo en teclados y Leonel en el saxo.
+            <p class="w3-justify textodescripcion">La banda está conformada por Beto en guitarra y voz, Uriel en bateria, Hernán en guitarra, Ariel en bajo, Romina en trombon, Gastón en trompeta, Facundo en teclados, Leonel en el saxo alto y Guillermo en el saxo tenor.
             </p>
             <div class="w3-row w3-padding-32">
                 <div class="w3-third">
