Agregado fecha makena

--- a/views/secciones/proximos.erb
+++ b/views/secciones/proximos.erb
@@ -17,8 +17,8 @@
 
         <div class="w3-container textocategorias">
             <a href="https://www.facebook.com/events/461483437571767/" target="_blank" class="quitar">
-                <span class="textocategorias2">Viernes 22 de Septiembre en Gier !</span>
-                Alvarez Thomas 1078 CABA, entrada $100!
+                <span class="textocategorias2">Atentos que se vienen mas novedades!</span>
+                Proximamente
                 <i class="material-icons">priority_high</i>
             </a>
         </div>
