--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -14,6 +14,14 @@
         <br>
 
         <div class="w3-container w3-hoverable">
+            <a href="makena2" class="quitar">
+                <span class="textodescripcion">Makena Cantina Culub | 21 hs | CABA|</span>
+                <span class="texttercernivel">9 de Diciembre de 2017</span>
+                <img src="/imagenes/flyers/espresso.jpg" class="w3-circle w3-margin-right" style="width:45px">
+            </a>
+        </div>
+        <br>
+        <div class="w3-container w3-hoverable">
             <a href="espresso" class="quitar">
                 <span class="textodescripcion">Espresso Bar | 23 hs | Caseros|</span>
                 <span class="texttercernivel">2 de Diciembre de 2017</span>
