agregado botones sc y sp

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -78,6 +78,16 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
+                <a href="https://www.soundcloud.com/buenacosecha" target="_blank">
+                    <i id="social-sc" class="fa fa-soundcloud fa-3x social"></i>
+                </a>
+            </li>
+            <li class="w3-hide-small w3-hide-medium w3-right">
+                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fopen.spotify.com%2Falbum%2F1G8EXEJwuIyXM2MsVQrir1%3Fsi%3DZTDTSRL-R9GoKE_-63EGXA&h=ATOlvlGsMdSPNuH1zr8tcE-n4Jr2zrlCtDsZlq-HvK5mH2DMGLs5CD44ByexTHSpF6jN0P67AzAO7TsoxLzrV7KrH4sGNbbF6HcUw78XmdImLozvDOUv6zFpFg6wPc3fwGgvyAdJ84b97cJvNf8aSWfc5NvjS3GKxkmo1KBr_OIIaNIvhOeBt3qvpskL90e-Q7-62N943U6CnHDJT-xaGRbEcu5OgeYiOozR7MxK5MZYkeD_kHsqNhGHseCn7w9OKhlY-UUkA5ySqRaT6QWqvA00QcIFqy5ZLkGqgPXgWak" target="_blank">
+                    <i id="social-sp" class="fa fa-spotify fa-3x social"></i>
+                </a>
+            </li>
+            <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
                     <i id="social-fb" class="fa fa-facebook-square fa-3x social"></i>
                 </a>
