--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2005,6 +2005,14 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
     color: #3B5998;
 }
 
+#social-sp:hover {
+    color: #84bd00;
+}
+
+#social-sc:hover {
+    color: #ff7700;
+}
+
 #social-tw:hover {
     color: #4099FF;
 }
