--- a/views/index.erb
+++ b/views/index.erb
@@ -21,12 +21,15 @@
         </div>
 
         <div class="mySlides  w3-display-container">
-            <img src="/imagenes/galeria/slide/band1.jpg" class="w3-animate-bottom" style="width:100%">
+            <img src="/imagenes/galeria/fechas/makena9-12/band1.jpg" class="w3-animate-bottom" style="width:100%">
             <div class="w3-display-middle w3-container w3-padding-16 w3-red">
                 Buena Cosecha !
             </div>
         </div>
+        <!-- dejo en stand by el carrusel
 
+        URL del artículo: http://www.ejemplode.com/17-html/94-ejemplo_de_comentario_en_html.html
+        Fuente: ejemplos de Comentario en HTML
         <div class="mySlides  w3-display-container">
             <img src="/imagenes/galeria/slide/band2.jpg" class="w3-animate-bottom" style="width:100%">
             <div class="w3-display-middle w3-container w3-padding-16 w3-red">
@@ -101,7 +104,7 @@
         </div>
 
 
-    </div>
+    </div>  -->
 
 </body>
 
