botones del footer agregados

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -140,10 +140,10 @@
             <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
         </a>
         <a href="https://open.spotify.com/artist/1m9R8RiV69vJDs6Bq4zodg" target="_blank">
-            <i id="social-tw" class="fa fa-spotify-square fa-2x social"></i>
+            <i id="social-sp" class="fa fa-spotify-square fa-2x social"></i>
         </a>
         <a href="https://www.soundcloud.com/buenacosecha" target="_blank">
-            <i id="social-in" class="fa fa-soundcloud fa-2x social"></i>
+            <i id="social-sc" class="fa fa-soundcloud fa-2x social"></i>
         </a>
         <a href="https://www.twitter.com/buenacosechaska" target="_blank">
             <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
