--- a/views/layout.erb
+++ b/views/layout.erb
@@ -51,6 +51,7 @@
                     </i>
                 </a>
             </li>
+            <li><iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:1m9R8RiV69vJDs6Bq4zodg&size=basic&theme=dark" width="200" height="28" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe></li>
 
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="javascript:void(0)">
