audios para bajar

--- a/views/secciones/audios.erb
+++ b/views/secciones/audios.erb
@@ -23,19 +23,19 @@
                 <br>
                 <div class="">
                     Descargar Green Fingers
-                    <a href="http://www.filedropper.com/1-greenfingers" target="_blank"></a>
+                    <a href=http://www.filedropper.com/1-greenfingers><img src=http://www.filedropper.com/download_button.png width=127 height=145 border=0/></a><br/>
                     <span class="glyphicon glyphicon-cloud-download"></span>
                 </div>
                 <br>
                 <div class="">
                     Descargar Misteria
-                    <a href="http://www.filedropper.com/2-misteria" target="_blank"></a>
+                    <a href=http://www.filedropper.com/2-misteria><img src=http://www.filedropper.com/download_button.png width=127 height=145 border=0/></a><br/>
                     <span class="glyphicon glyphicon-cloud-download"></span>
                 </div>
                 <br>
                 <div class="">
                     Descargar Tierra
-                    <a href="http://www.filedropper.com/3-tierra" target="_blank"></a>
+                    <a href=http://www.filedropper.com/3-tierra><img src=http://www.filedropper.com/download_button.png width=127 height=145 border=0/></a><br/>
                     <span class="glyphicon glyphicon-cloud-download"></span>
                 </div>
             </div>
