colores y tamaños del menu

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -60,7 +60,7 @@
 
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="javascript:void(0)">
-                    <i id="social-se" class="fa fa-search fa-3x social"></i>
+                    <i id="social-se" class="fa fa-search fa-3x social" style="font-size:16px"></i>
                 </a>
             </li>
 
