--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -17,7 +17,7 @@
             <a href="fusion" class="quitar">
                 <span class="textodescripcion">Fusion Bar | 23 hs | CABA|</span>
                 <span class="texttercernivel">30 de Diciembre de 2017</span>
-                <img src="/imagenes/flyers/makena3.jpg" class="w3-circle w3-margin-right" style="width:45px">
+                <img src="/imagenes/flyers/fusion.jpg" class="w3-circle w3-margin-right" style="width:45px">
             </a>
         </div>
         <br>
