--- a/public/estilos/styles.css
+++ b/public/estilos/styles.css
@@ -2064,17 +2064,17 @@ input[type=checkbox].w3-check:disabled+.w3-validate, input[type=radio].w3-radio:
 
 .menuhomerojo {
     font-size: 16px;
-    font-family: 'Slackey', cursive;
+    font-family: 'Days One', sans-serif, cursive;
 }
 
 .menuhomeamarillo {
     font-size: 16px;
-    font-family: 'Slackey', cursive;
+    font-family: 'Days One', sans-serif, cursive;
 }
 
 .menuhomeverde {
     font-size: 16px;
-    font-family: 'Slackey', cursive;
+    font-family: 'Days One', sans-serif, cursive;
 }
 
 .textomenucentro {
