--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link href="https://fonts.googleapis.com/css?family=Bangers|Lato|Fascinate+Inline|Finger+Paint|Anton|Slackey|Permanent+Marker|Shrikhand" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bangers|Lato|Fascinate+Inline|Finger+Paint|Anton|Days+One|Permanent+Marker|Shrikhand" rel="stylesheet">
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
         <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
