prueba nueva home

--- a/views/index2.erb
+++ b/views/index2.erb
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Buena Cosecha</title>
+        <title>Buena Cosecha | Ska Reggae </title>
         <meta name="google-site-verification" content="cUWX8JFI31vB6M5HPZGZmoYoIAUT8TOvdMAVTTqbVGs"/>
         <meta name="Buena Cosecha | Ska, Reggae" content="Buena Cosecha, Página oficial, ska, reggae, musica, banda, shows, recitales, fotos, videos">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -15,7 +15,7 @@
     <body>
         <div class="w3-row w3-border">
             <div class="w3-container w3-half w3-white">
-                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:50%;margin-top:50px" class="w3-hover-sepia w3-round">
+                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:50%;margin-top:50px" class="img-rounded ">
             </div>
             <div class="w3-container w3-half w3-black">
               <h2>Semilla</h2>
