prueba nueva home

--- a/views/index2.erb
+++ b/views/index2.erb
@@ -7,6 +7,7 @@
         <meta name="Buena Cosecha | Ska, Reggae" content="Buena Cosecha, Página oficial, ska, reggae, musica, banda, shows, recitales, fotos, videos">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
@@ -15,7 +16,7 @@
     <body>
         <div class="w3-row w3-border">
             <div class="w3-container w3-half w3-white">
-                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:50%;margin-top:50px" class="img-rounded ">
+                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:50%;margin-top:50px" class="img-rounded">
             </div>
             <div class="w3-container w3-half w3-black">
               <h2>Semilla</h2>
