prueba nueva home

--- a/views/index2.erb
+++ b/views/index2.erb
@@ -15,7 +15,7 @@
     <body>
         <div class="w3-row w3-border">
             <div class="w3-container w3-half w3-white">
-                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:50%;margin-top:50px" class="img-rounded">
+                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:50%;margin-top:50px" class="rounded">
             </div>
             <div class="w3-container w3-half w3-black">
               <h2>Semilla</h2>
