--- a/views/index2.erb
+++ b/views/index2.erb
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     </head>
-    <body background="/imagenes/galeria/fechas/makena9-12/band1.jpg" class="w3-animate-bottom" style="width:100%">
+    <body background="/imagenes/galeria/fechas/makena9-12/band1.jpg" style="width:100%">
         <div class="w3-cell-row w3-border">
             <div class="w3-container w3-half w3-white w3-border">
                 <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:40%;margin-top:50px" class="w3-round w3-hover-opacity">
